--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     grid-template:1em/ auto auto auto;
     grid-gap:1em;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(7, 1fr);
 
 }
 .container > div {
@@ -18,7 +18,9 @@
 }
 .box2{
     background-color: seagreen;
-    grid-row: 3/5;
+    grid-row: 3/6;
+    grid-column:1;
+    margin-bottom: 20px;
 }
 
 .box3{
@@ -28,14 +30,16 @@
 }
 .box4{
     background-color: orangered;
-    grid-row:4/5;
+    grid-row:4/6;
     grid-column: 2/3;
+    margin-bottom: 20px;
 }
 
 .box5{
     background-color: seagreen;
     grid-column:1/3;
-    grid-row:5/6;
+    grid-row:6/7;
+    margin-top: -20px;
 }
 /* MIDDLE */
 .box6{
@@ -57,7 +61,7 @@
 .box9{
     background-color: rebeccapurple;
     grid-column: 3/5;
-    grid-row:5/6;
+    grid-row:5/7;
 }
 
 /* RIGHT */
@@ -78,12 +82,14 @@
     grid-row:2;
 }
 .box13{
-    background-color: rebeccapurple;
+    background-color:rebeccapurple;
+    grid-row:3/6;
     grid-column: 5/7;
-    grid-row:3/5;
+    margin-bottom: -15px;
 }
 .box14{
     background-color: lightskyblue;
+    grid-row:6/7;
     grid-column:5/7;
-    grid-row:5;
+    margin-top: 15px;
 }
